# MUSI-lab-session-1

./: .gitignore  README.md  pyproject.toml
data/: README.md
musi_labs/: __init__.py
musi_labs/data/: __init__.py  reader.py
musi_labs/localization/: EKF.py  PF.py  __init__.py  dead_reckoning.py
musi_labs/slam/: __init__.py  ekf_slam.py
musi_labs/utils/: data_utils.py  metrics.py
musi_labs/visualization/: marimo_helpers.py
notebooks/: session1_intro_and_basics.py
